Update 00.md - sequence diagram

--- a/00.md
+++ b/00.md
@@ -52,6 +52,23 @@ Deterministically maps a message to a public key point on the secp256k1 curve, u
 - Alice can take the pair `(x, C)` as a token and can send it to `Carol`.
 - `Carol` can send `(x, C)` to `Bob` who then checks that `k*hash_to_curve(x) == C` (**verification**), and if so treats it as a valid spend of a token, adding `x`  to the list of spent secrets.
 
+```mermaid
+sequenceDiagram
+    participant Bob as Mint Bob
+    participant Alice
+    participant Carol
+
+    Bob->>Bob: Publish public key K = kG
+    Alice->>Alice: Pick secret x and compute Y = hash_to_curve(x)
+    Alice->>Bob: Send B_ = Y + rG (blinding)
+    Bob->>Alice: Send back blinded key C_ = kB_ (DH key exchange and signing)
+    Alice->>Alice: Calculate unblinded key as C_ - rK = kY (unblinding)
+    Alice->>Carol: Send (x, C) as a token
+    Carol->>Bob: Send (x, C) to Bob (verification)
+    Bob->>Bob: Check if k*hash_to_curve(x) == C
+    Bob->>Bob: If valid, treat as a valid spend and add x to the list of spent secrets
+```
+
 ## 0.1 - Models
 
 ### `BlindedMessage`
